add badges b4 they exist just cos

--- a/styling-guide.html
+++ b/styling-guide.html
@@ -289,4 +289,4 @@ changed (colour-wise).</p>
 </tbody></table>
 <p>+ the highlight.js classes (see <a href="https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html">their docs</a>)</p>
 
-    </section></div><div class="copyright"><hr><p><a href="https://dragonwocky.me/#licensing">© 2020 dragonwocky, under the MIT license</a></p></div><nav><a class="prev" href="index.html">ᐊ</a></nav></article></div></body></html>
+    </section></div><div class="copyright"><hr><p><a href="https://dragonwocky.me/#mit">© 2020 dragonwocky, under the MIT license</a></p></div><nav><a class="prev" href="index.html">ᐊ</a></nav></article></div></body></html>
